--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,13 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--<script src="skycons.js"></script>-->
 </head>
-<body>
-  <!--<app-root></app-root>-->
-  <app-current-weather></app-current-weather>
+<body >
+  <app-root></app-root>
+
+  <div class="container">
+      <app-current-weather></app-current-weather>
+  </div>
 </body>
 </html>
